--- a/style.css
+++ b/style.css
@@ -1,22 +1,25 @@
+
+
+
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     list-style: none;
 }
-/*
+
 body{
     background-image: url(imagem/fundoo.jpg);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-} */
+} 
 .content{
     display: flex;
     justify-content: space-around;
     align-items: center;
     height: 90px;
-   
     background-color: black;
 }
 .logo{
@@ -26,13 +29,14 @@ body{
 ul{
     display: flex;
     margin-bottom: 10px;
+    cursor: pointer;
 }
 li{
     justify-content: space-between;
-    align-items: center;
-    font-family: Georgia, 'Times New Roman', Times, serif;
-    font-size: 400;
-    margin: 10px;
+    align-items: cente;
+    font-family: "Roboto", sans-serif;
+    font-size: 300;
+    margin:24px;
     color: white;
     cursor: pointer;
 }
@@ -42,6 +46,7 @@ li a:hover{
 }
 h1{
     text-align: center;
+    font-family: "Roboto", sans-serif;
     padding: 30px;
     color: white;
 }
@@ -50,10 +55,54 @@ h1{
     justify-content: center;
     flex-wrap: wrap;
 }
-
 img{
-    border: 1px solid black;
+   
     margin: 10px;
-    width: 195px;
+    width: 295px;
     height: 150px;
+}
+
+.info{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    font-family: "Roboto", sans-serif;
+    border: 1px solid black;
+    border-radius: 1rem 1rem ;
+    margin: 25px;
+    padding: 35px;
+    width: 370px;
+    background-color: white;
+}
+.perdi{
+    width: 230px;
+    height: 41px;
+    border: none;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-weight: 600;
+    border-radius: 1rem 1rem;
+    font-family: "Roboto", sans-serif;
+    cursor: pointer;
+}
+h4{
+    font-weight: 300;
+    font-family: "Roboto", sans-serif;
+}
+.value-origem{
+    font-size: 20px;
+    font-weight: 450;
+}
+i{
+ margin: 10px;
+}
+.perdi:hover{
+    background-color: rgb(78, 76, 76);
+    color: white;
+    
+}
+.value{
+    margin-left: 200px;
+    font-size: 14px;
+    text-decoration: line-through;
+    margin: 5px;
 }
